--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@ body{
 }
 /* ----------top player style start-----------*/
 main{
+    
     display: flex;
-    justify-content: center;
-    /* align-items: center; */
+    flex-direction: column;
+    /* justify-content: center; */
+
+    align-items: center;
 }
 .container{
     /* display: flex; */
@@ -18,7 +21,7 @@ main{
     /* align-items: center; */
     /* justify-content: center; */
     background-color: #FFFFFF;
-    height: 680px;
+    height: 660px;
     width: 880px;
     border-radius: 3px;
     padding: 40px;
@@ -33,8 +36,6 @@ main{
     grid-template-columns: repeat(3, 1fr);
     margin-top: 40px;
     row-gap: 30px;
-    
-    
 }
 .title{
     color: #562EFF;
@@ -100,4 +101,88 @@ main{
     font-size: 20px;
     margin-left: 10px;
     margin-bottom: 15px;
+}
+
+.courses-template img{
+    width: 224px;
+    height: 105px;
+    /* margin-top: 50px; */
+}
+.footer{
+    /* width: 880px; */
+    height: 330px;
+    margin-top: 20px;
+}
+.cours-title{
+     margin-bottom: 30px;
+     color: #562EFF;
+     font-size: 34px;
+     font-weight: 500px;
+}
+.courses-template{
+    display: flex;
+    /* position: absolute; */
+}
+.cours-info .time{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 18px;
+}
+.react{
+    /* box-shadow: ; */
+    /* position: absolute; */
+    filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+}
+.react a{
+    text-decoration: none;
+    color: #c57d7d;
+}
+.react h2{
+    margin: 15px 0 15px 0;
+}
+.fa-star.emty{
+    color: gold;
+}
+.fa-star.filled{
+    color: #AEAEAE;
+    margin-right: 10px;
+}
+.rating{
+    margin-top: 15px;
+    margin-right: 15px;
+}
+/* -------display -------- */
+/* .top-blogs{
+    display: none; */
+}
+/* ------------------------------- */
+
+@media only screen and (max-width:644px) {
+    body{
+        width: 100%;
+        height: 100%;
+    }
+    .container{
+        width: 100%;
+        height: 100%;
+    }
+    .players{
+        flex-direction: column;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+    }
+    .player{
+        flex-direction: column;
+    }
+    .blogs{
+        background-color: #562EFF;
+    }
+    /* ------------footer responsive
+    --------------- */
+.courses-template{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
